Swedish: fix typo
Change-Id: Id8923ad0232af2d72f95b12021e138ba30b19d37

--- a/res/values-sv/arrays.xml
+++ b/res/values-sv/arrays.xml
@@ -2,7 +2,7 @@
 <resources>
     <string-array name="pref_tap_action_entries">
         <item>App-detaljer</item>
-        <item>Gröm</item>
+        <item>Glöm</item>
         <item>Växla tillstånd</item>
     </string-array>
 
