--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -1,8 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string-array name="pref_tap_action_entries">
-        <item>Detaily aplikace</item>
-        <item>Zapomenout</item>
-        <item>Přepnout stav</item>
-    </string-array>
+  <string-array name="pref_tap_action_entries">
+    <item>Detaily aplikace</item>
+    <item>Zapomenout</item>
+    <item>Přepnout stav</item>
+  </string-array>
+
+  <string-array name="pref_status_icon_type_entries">
+    <item>Tečka</item>
+    <item>Smajlík</item>
+  </string-array>
+
+  <string-array name="pref_date_format_entries">
+    <item>Systémový</item>
+    <item>12/31/2010</item>
+    <item>31/12/2010</item>
+    <item>2010/12/31</item>
+  </string-array>
+
+  <string-array name="pref_notification_entries">
+    <item>V okně</item>
+    <item>V liště</item>
+  </string-array>
 </resources>
