--- a/res/values-nl/arrays.xml
+++ b/res/values-nl/arrays.xml
@@ -11,14 +11,14 @@
     <item>Emoticon</item>
   </string-array>
   <string-array name="pref_date_format_entries">
-    <item>Standaard instellingen</item>
+    <item>Systeeminstellingen</item>
     <item>12/31/2011</item>
     <item>31/12/2011</item>
     <item>2011/12/31</item>
   </string-array>
   <string-array name="pref_notifications_type_entries">
     <item>Pop-up</item>
-    <item>Statusbalk</item>
+    <item>Notificatie</item>
   </string-array>
   <string-array name="pref_toast_location_entries">
     <item>Standaard</item>
