--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   Copyright (c) 2011 Adam Shanks (ChainsDD)
-  
+ 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
-  
+
     http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -72,5 +72,17 @@
         <item>48</item>
         <item>17</item>
         <item>80</item>
+    </string-array>
+ 
+    <string-array name="pref_user_mode_entries">
+        <item>Owner only</item>
+        <item>Owner controlled</item>
+        <item>User controlled</item>
+    </string-array>
+    <!-- Do not translate -->
+    <string-array name="pref_user_mode_values" translatable="false">
+        <item>owner_only</item>
+        <item>owner</item>
+        <item>user</item>
     </string-array>
 </resources>
