--- a/res/values-fr/arrays.xml
+++ b/res/values-fr/arrays.xml
@@ -12,9 +12,9 @@
   </string-array>
   <string-array name="pref_date_format_entries">
     <item>Par défaut du système</item>
-    <item>12/31/2011</item>
-    <item>31/12/2011</item>
-    <item>2011/12/31</item>
+    <item>12/31/2013</item>
+    <item>31/12/2013</item>
+    <item>2013/12/31</item>
   </string-array>
   <string-array name="pref_notifications_type_entries">
     <item>Toast</item>
@@ -25,5 +25,10 @@
     <item>En haut</item>
     <item>Au centre</item>
     <item>En bas</item>
+  </string-array>
+  <string-array name="pref_user_mode_entries">
+     <item>Seulement le propriétaire</item>
+     <item>Controlé par le propriétaire</item>
+     <item>Controlé par l\'utilisateur</item>
   </string-array>
 </resources>
