--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,29 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  Copyright (c) 2011 Adam Shanks (ChainsDD)
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-    http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-<resources>
-<!--     Base application theme is the default theme -->
-<!--     <style name="Theme" parent="android:Theme" /> -->
+<!-- Copyright (C) 2011 Adam Shanks (ChainsDD)
 
-<!--     Variation on the Light theme that turns off the title -->
-<!--     <style name="Theme.Superuser" parent="android:style/Theme.Light"> -->
-<!--         <item name="android:windowNoTitle">true</item> -->
-<!--         <item name="android:windowContentOverlay">@null</item> -->
-<!--        <item name="android:windowBackground">@color/title_background</item> -->
-<!--     </style> -->
+     Licensed under the Apache License, Version 2.0 (the "License");
+     you may not use this file except in compliance with the License.
+     You may obtain a copy of the License at
+
+          http://www.apache.org/licenses/LICENSE-2.0
+
+     Unless required by applicable law or agreed to in writing, software
+     distributed under the License is distributed on an "AS IS" BASIS,
+     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+     See the License for the specific language governing permissions and
+     limitations under the License.
+-->
+<resources xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<!-- Base application theme is the default theme -->
+<!--
+    <style name="Theme" parent="android:Theme" />
+-->
+
+<!-- Variation on the Light theme that turns off the title -->
+<!--
+    <style name="Theme.Superuser" parent="android:style/Theme.Light">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@color/title_background</item>
+     </style>
+-->
 
     <style name="Theme.Superuser" parent="Theme.Sherlock.Light.DarkActionBar">
         <item name="actionBarStyle">@style/Widget.Superuser.ActionBar</item>
