Superuser: Updating files
- \u2026
- Whitespace fixing
- We live in 2013 now :)
- Fixing permissions (0644)
- Copyright notice update
- Use plurals.xml for plurals

Change-Id: I48745373f8f6630227b426f087b484df51967128

--- a/res/values-cs/plurals.xml
+++ b/res/values-cs/plurals.xml
@@ -13,9 +13,23 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
+
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <item type="id" name="title_container" />
-    <item type="id" name="title_logo" />
-    <item type="id" name="title_text" />
+    <plurals name="restore_complete">
+      <item quantity="one">Jedna aplikace a předvolby byly obnoveny</item>
+      <item quantity="other">%1$d aplikace a předvolby obnoveny</item>
+    </plurals>
+    <plurals name="pref_logs_deleted">
+      <item quantity="one">Jeden protokol odstraněn</item>
+      <item quantity="other">%1$d protokolů odstraněno</item>
+    </plurals>
+    <plurals name="pin_incorrect_try">
+      <item quantity="one">Poslední šance</item>
+      <item quantity="other">Ne - zbývá %1$d pokusů</item>
+    </plurals>
+    <plurals name="malicious_apps_message1">
+      <item quantity="one">Následující balíček byl shledán škodlivým:</item>
+      <item quantity="other">Následující balíčky byly shledány jako škodlivé:</item>
+    </plurals>
 </resources>
