--- a/res/values-cs/arrays.xml
+++ b/res/values-cs/arrays.xml
@@ -13,9 +13,7 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<resources xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
+<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string-array name="pref_automatic_action_entries">
         <item>Dotázat se</item>
         <item>Odepřít</item>
@@ -36,7 +34,7 @@
 
     <string-array name="pref_notifications_type_entries">
         <item>Rychlá zpráva</item>
-        <item>Stavový řádek</item>
+        <item>Stavová lišta</item>
     </string-array>
 
     <string-array name="pref_toast_location_entries">
@@ -44,5 +42,11 @@
         <item>Nahoře</item>
         <item>Uprostřed</item>
         <item>Dole</item>
+    </string-array>
+
+    <string-array name="pref_user_mode_entries">
+        <item>Pouze vlastník</item>
+        <item>Řízeno vlastníkem</item>
+        <item>Řízeno uživatelem</item>
     </string-array>
 </resources>
